--- a/src/JetStudy.WebApp/Views/Course/Index.cshtml
+++ b/src/JetStudy.WebApp/Views/Course/Index.cshtml
@@ -6,16 +6,21 @@
     ViewData["Title"] = "Index";
 }
 
+<div class="float-end">
+    <a href="/course/create" class="btn btn-warning">Додати курс</a>
+</div>
 <h1>Список курсів</h1>
 <hr />
 
 <div class="row">
-    @for (int i = 0; i < 6; i++)
-    {
-        foreach (var course in Model)
+        @foreach (var course in Model)
         {
+            <!-- Взяв картку з зображенням зі сторінки https://getbootstrap.com/docs/5.3/components/card/ -->
+
             <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+
                 <div class="card mb-2">
+                    <img src="@course.CoverPath" class="card-img-top" alt="@course.Title">
                     <div class="card-body">
                         <h5 class="card-title">@course.Title</h5>
                          <p class="card-text">@course.ShortDesc</p>
@@ -24,5 +29,4 @@
                 </div>
             </div>
         }
-    }
 </div>
