--- a/src/JetStudy.WebApp/Views/Session/Create.cshtml
+++ b/src/JetStudy.WebApp/Views/Session/Create.cshtml
@@ -47,3 +47,9 @@
         </form>
     </div>
 </div>
+
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+}
