--- a/src/JetStudy.WebApp/Views/Shared/_JetStudyAdminLayout.cshtml
+++ b/src/JetStudy.WebApp/Views/Shared/_JetStudyAdminLayout.cshtml
@@ -1,13 +1,6 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <partial name="_JetStudyHead" />
-
-@*
-
- <partial name="_Navigation" />
-                    <partial name="_LoginPartial" />
-*@
-
 <body>
     <div id="app">
         <div id="sidebar" class="active">
@@ -15,13 +8,14 @@
                 <div class="sidebar-header">
                     <div class="d-flex justify-content-between">
                         <div class="logo">
-                            <a href="index.html"><img src="assets/images/logo/logo.png" alt="Logo" srcset=""></a>
+                            <a href="/"><img src="/assets/images/logo/logo.png" alt="Logo" srcset=""></a>
                         </div>
                         <div class="toggler">
                             <a href="#" class="sidebar-hide d-xl-none d-block"><i class="bi bi-x bi-middle"></i></a>
                         </div>
                     </div>
                 </div>
+                <partial name="_LoginPartial" />
                 <partial name="_JetStudyNavigation" />
                 <button class="sidebar-toggler btn x"><i data-feather="x"></i></button>
             </div>
@@ -32,8 +26,7 @@
                     <i class="bi bi-justify fs-3"></i>
                 </a>
             </header>   
-                @RenderBody()
- 
+                @RenderBody() 
             <partial name="_JetStudyFooter" />
          </div>      
 
