--- a/src/JetStudy.WebApp/Views/Shared/_JetStudyFooter.cshtml
+++ b/src/JetStudy.WebApp/Views/Shared/_JetStudyFooter.cshtml
@@ -1,4 +1,5 @@
-﻿<footer>
+﻿<hr />
+<footer>
     <div class="footer clearfix mb-0 text-muted">
         <div class="float-start">
             <p>2023 &copy; JetStudy App</p>
