--- a/src/JetStudy.WebApp/Views/Shared/_JetStudyNavigation.cshtml
+++ b/src/JetStudy.WebApp/Views/Shared/_JetStudyNavigation.cshtml
@@ -27,7 +27,7 @@
                         <a href="/course/create">Створити новий</a>
                     </li>
                     <li class="submenu-item ">
-                        <a href="/teachercourse">Мої курси</a>
+                        <a href="/course/my">Мої курси</a>
                     </li>
                 }
                 @if (User.IsInRole("Student"))
