--- a/src/JetStudy.WebApp/Views/Course/Create.cshtml
+++ b/src/JetStudy.WebApp/Views/Course/Create.cshtml
@@ -1,45 +1,80 @@
 ﻿@using JetStudy.Core.Entities;
 @model Course
+@{
+    ViewData["Title"] = "Створення нового курсу";
+}
 
-<h1>Створення нового курсу</h1>
-
-<div class="row">
-    <div class="col-md-4">
-
-        <form asp-action="Create" enctype="multipart/form-data">
-
-            @Html.ValidationSummary()
-
-            <div data="mb-3">
-                @Html.DisplayNameFor(model => model.Title)
-                <input asp-for="Title" class="form-control" />
-                <span asp-validation-for="Title" class="text-danger" />
-            </div>
-
-            <div data="mb-3">
-                @Html.DisplayNameFor(model => model.ShortDesc)
-                @Html.TextAreaFor(model => model.ShortDesc, new { @class = "form-control"})
-                <span asp-validation-for="ShortDesc" class="text-danger" />
-            </div>
-
-            <div data="mb-3">
-                @Html.DisplayNameFor(model => model.DetailedDesc)
-                @Html.TextAreaFor(model => model.DetailedDesc, new { @class = "form-control"})
-                <span asp-validation-for="DetailedDesc" class="text-danger" />
-            </div>
-
-            <div class="form-group mt-3">
-                @Html.DisplayNameFor(model => model.CoverFile)
-                <input asp-for="CoverFile" accept="image/*" />
-                <span asp-validation-for="CoverFile" class="text-danger"></span>
-            </div>
-
-            <br />
-            <button type="submit" class="btn btn-success">Зберегти</button>
-
-        </form>
+<div class="page-title">
+    <div class="row">
+        <div class="col-12 col-md-6 order-md-1 order-last">
+            <h3>@ViewData["Title"]</h3>
+            <p class="text-subtitle text-muted">
+                Ви можете додати власні навчальні події
+            </p>
+        </div>
+        <div class="col-12 col-md-6 order-md-2 order-first">
+            <nav aria-label="breadcrumb" class="breadcrumb-header float-start float-lg-end">
+                <ol class="breadcrumb">
+                    <li class="breadcrumb-item"><a href="/">Головна</a></li>
+                    <li class="breadcrumb-item"><a href="/course">Курси</a></li>
+                    <li class="breadcrumb-item active" aria-current="page">Новий курс</li>
+                </ol>
+            </nav>
+        </div>
     </div>
 </div>
+
+<hr />
+<section class="section">
+    <div class="row">
+        <div class="col-6">
+            <div class="card">
+                <div class="card-header">
+                    <h4>Введіть дані</h4>
+                </div>
+                <div class="card-body">
+                    <form asp-action="Create" enctype="multipart/form-data">
+
+                        @Html.ValidationSummary()
+
+                        <div data="mb-3">
+                            @Html.DisplayNameFor(model => model.Title)
+                            <input asp-for="Title" class="form-control" />
+                            <span asp-validation-for="Title" class="text-danger" />
+                        </div>
+
+                        <div data="mb-3">
+                            @Html.DisplayNameFor(model => model.ShortDesc)
+                            @Html.TextAreaFor(model => model.ShortDesc, new { @class = "form-control" })
+                            <span asp-validation-for="ShortDesc" class="text-danger" />
+                        </div>
+
+                        <div data="mb-3">
+                            @Html.DisplayNameFor(model => model.DetailedDesc)
+                            @Html.TextAreaFor(model => model.DetailedDesc, new { @class = "form-control" })
+                            <span asp-validation-for="DetailedDesc" class="text-danger" />
+                        </div>
+
+                        <div class="form-group mt-3">
+                            @Html.DisplayNameFor(model => model.CoverFile)
+                            <input asp-for="CoverFile" accept="image/*" />
+                            <span asp-validation-for="CoverFile" class="text-danger"></span>
+                        </div>
+
+                        <br />
+                        <button type="submit" class="btn btn-success">Зберегти</button>
+
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+
+
+
 @section Scripts {
     @{
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
