--- a/src/JetStudy.WebApp/Views/Course/My.cshtml
+++ b/src/JetStudy.WebApp/Views/Course/My.cshtml
@@ -13,7 +13,7 @@
         <div class="col-12 col-md-6 order-md-1 order-last">
             <h3>@ViewData["Title"]</h3>
             <p class="text-subtitle text-muted">
-                Перелік усіх доступних курсів для вивчення
+                Перелік Ваших курсів
             </p>
         </div>
         <div class="col-12 col-md-6 order-md-2 order-first">
@@ -51,6 +51,7 @@
 
                             <p class="card-text">@course.ShortDesc</p>
                             <a href="/course/details/@course.Id" class="btn btn-outline-primary">Детальніше</a>
+                            <a href="/course/edit/@course.Id" class="btn btn-outline-warning">Редагувати</a>
                             <p>
                                 <small>@course.Owner.LastName @course.Owner.FirstName</small>
                             </p>
