--- a/src/JetStudy.WebApp/Views/Shared/_LoginPartial.cshtml
+++ b/src/JetStudy.WebApp/Views/Shared/_LoginPartial.cshtml
@@ -3,7 +3,7 @@
 @inject SignInManager<User> SignInManager
 @inject UserManager<User> UserManager
 
-<ul class="navbar-nav">
+<ul class="navbar-nav" style="text-align: center !important">
 @if (SignInManager.IsSignedIn(User))
 {
     <li class="nav-item">
@@ -11,7 +11,7 @@
     </li>
     <li class="nav-item">
         <form  class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-            <button  type="submit" class="nav-link btn btn-link text-dark">Logout</button>
+            <button  type="submit" class="nav-link btn btn-outline-danger text-dark">Logout</button>
         </form>
     </li>
 }
